# resumetailor

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: base_resume.yaml  static_sections.yaml
examples/job_descriptions/: fullstack_engineer.txt  google_backend.txt  leed.txt  senior_backend.txt
src/resume_tailor/: __main__.py
src/resume_tailor/cli/: commands.py
src/resume_tailor/config/: schemas.py  settings.py
src/resume_tailor/core/: service.py  template.py
src/resume_tailor/llm/: base.py  gemini.py  mock.py  ollama.py  prompts.py
src/resume_tailor/renderer/: rendercv.py
src/resume_tailor/utils/: logger.py
tests/: conftest.py
tests/test_core/: test_schemas.py  test_template.py
tests/test_llm/: test_base.py  test_gemini.py
